--- a/app/src/main/res/layout/activity_crew.xml
+++ b/app/src/main/res/layout/activity_crew.xml
@@ -27,7 +27,6 @@
         android:layout_marginRight="43dp"
         android:layout_marginBottom="103dp"
         android:background="@null"
-        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -222,13 +221,12 @@
         android:layout_width="85dp"
         android:layout_height="37dp"
         android:layout_marginStart="9dp"
-        android:layout_marginLeft="9dp"
         android:layout_marginTop="156dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/colorButton"
-        android:text="Quellen"
+        android:background="@drawable/roundbutton"
+        android:text="@string/bt_quellen"
+        android:textColor="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
