--- a/app/src/main/res/layout/activity_logbuch.xml
+++ b/app/src/main/res/layout/activity_logbuch.xml
@@ -90,17 +90,17 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="@color/colorBackground"
-        app:layout_constraintTop_toBottomOf="@+id/bt_Prüfung"
+        app:layout_constraintTop_toBottomOf="@+id/bt_Programmieren"
         app:layout_constraintVertical_bias="0.51" />
 
     <Button
-        android:id="@+id/bt_Prüfung"
+        android:id="@+id/bt_Programmieren"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="150dp"
         android:background="@drawable/roundbutton"
-        android:text="@string/bt_programmieren"
+        android:text="Programmieren"
         android:textColor="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
