--- a/app/src/main/res/layout/activity_main_menue.xml
+++ b/app/src/main/res/layout/activity_main_menue.xml
@@ -10,32 +10,26 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="53dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginRight="52dp"
-        android:layout_marginBottom="42dp"
-        android:contentDescription="desc"
-        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
+        android:layout_width="38dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:contentDescription="@string/desc"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_score"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_schatzkiste"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toTopOf="@+id/tv_score"
         app:srcCompat="@drawable/muenze" />
 
     <ImageView
         android:id="@+id/iv_schatztruhe"
-        android:layout_width="155dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="113dp"
+        android:layout_height="108dp"
         android:contentDescription="@string/desc"
         app:layout_constraintBottom_toTopOf="@+id/tv_willkommen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4"
         app:srcCompat="@drawable/schatz3" />
 
 
@@ -110,13 +104,14 @@
         android:id="@+id/tv_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:text="Score: 0"
+        android:text="0000"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/iv_schatztruhe"
+        app:layout_constraintEnd_toStartOf="@+id/imageView5"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintStart_toEndOf="@+id/iv_schatztruhe"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.100000024" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
