--- a/app/src/main/res/layout/activity_statistik.xml
+++ b/app/src/main/res/layout/activity_statistik.xml
@@ -9,6 +9,23 @@
     tools:context=".Statistik">
 
 
+    <TextView
+        android:id="@+id/tv_level"
+        android:layout_width="wrap_content"
+        android:layout_height="49dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="216dp"
+        android:text="Aktuelles_Level: 1"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_gesamt" />
+
     <ImageButton
         android:id="@+id/ib_backStatistik"
         android:layout_width="59dp"
@@ -28,16 +45,16 @@
 
     <ImageView
         android:id="@+id/iv_schatzkiste"
-        android:layout_width="147dp"
-        android:layout_height="93dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="155dp"
+        android:layout_height="110dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="@string/desc"
         app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/truheoffen" />
+        app:srcCompat="@drawable/schatz3" />
 
     <TextView
         android:id="@+id/tv_schatz_des_hollaenders"
@@ -70,22 +87,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_schatz_des_hollaenders" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="53dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
+    <TextView
+        android:id="@+id/tv_gesamt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginRight="58dp"
-        android:layout_marginBottom="42dp"
-        android:contentDescription="desc"
-        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="40dp"
+        android:text="Gesamtfortschritt: 0%"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_schatzkiste"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/muenze" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_gesamtfortschritt"
+        app:layout_constraintVertical_bias="0.25" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
