--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -8,22 +8,30 @@
     android:orientation="vertical"
     tools:context=".Einstellungen">
 
+    <TextView
+        android:id="@+id/tv_score3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_schatztruhe"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.00999999" />
+
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="53dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginTop="84dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginBottom="42dp"
-        android:contentDescription="desc"
-        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
+        android:layout_width="38dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:contentDescription="@string/desc"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_score3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_schatzkiste"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toTopOf="@+id/tv_score3"
         app:srcCompat="@drawable/muenze" />
 
     <ImageButton
@@ -130,17 +138,5 @@
             android:background="@drawable/roundbutton"
             android:text="@string/bt_fortschritt_zuruecksetzten" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_score"
-        android:layout_width="143dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="40dp"
-        android:text="Score: "
-        android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/iv_schatztruhe"
-        app:layout_constraintTop_toBottomOf="@+id/tv_crew" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
