--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -8,6 +8,66 @@
     android:orientation="vertical"
     tools:context=".Einstellungen">
 
+    <LinearLayout
+        android:id="@+id/ll_Einstellungen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_schatztruhe">
+
+        <TextView
+            android:id="@+id/tv_username"
+            android:layout_width="198dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="38dp"
+            android:gravity="center_vertical"
+            android:text="@string/tv_aktueller_username" />
+
+        <Button
+            android:id="@+id/bt_name_aendern"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="22dp"
+            android:background="@drawable/roundbutton"
+            android:text="@string/bt_namen_aendern"
+            android:textColor="@color/colorBackground" />
+
+        <Button
+            android:id="@+id/bt_kaptain_kontaktieren"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="22dp"
+            android:background="@drawable/roundbutton"
+            android:text="@string/bt_kaptn_kontaktieren"
+            android:textColor="@color/colorBackground" />
+
+        <Button
+            android:id="@+id/bt_crew"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="22dp"
+            android:background="@drawable/roundbutton"
+            android:text="@string/bt_crew"
+            android:textColor="@color/colorBackground" />
+
+        <Button
+            android:id="@+id/bt_fortschritt_zuruecksetzten"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="90dp"
+            android:background="@drawable/roundbutton"
+            android:text="@string/bt_fortschritt_zuruecksetzten"
+            android:textColor="@color/colorBackground" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tv_score3"
         android:layout_width="wrap_content"
@@ -78,65 +138,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/schatz3" />
 
-
-    <LinearLayout
-        android:id="@+id/ll_Einstellungen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_schatztruhe">
-
-        <TextView
-            android:id="@+id/tv_username"
-            android:layout_width="198dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="38dp"
-            android:gravity="center_vertical"
-            android:text="@string/tv_aktueller_username" />
-
-        <Button
-            android:id="@+id/bt_name_aendern"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="22dp"
-            android:textColor="@color/colorBackground"
-            android:background="@drawable/roundbutton"
-            android:text="@string/bt_namen_aendern" />
-
-        <Button
-            android:id="@+id/bt_kaptain_kontaktieren"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="22dp"
-            android:textColor="@color/colorBackground"
-            android:background="@drawable/roundbutton"
-            android:text="@string/bt_kaptn_kontaktieren" />
-
-        <Button
-            android:id="@+id/bt_crew"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="@color/colorBackground"
-            android:layout_marginBottom="22dp"
-            android:background="@drawable/roundbutton"
-            android:text="@string/bt_crew" />
-
-        <Button
-            android:id="@+id/bt_fortschritt_zuruecksetzten"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="@color/colorBackground"
-            android:layout_marginBottom="90dp"
-            android:background="@drawable/roundbutton"
-            android:text="@string/bt_fortschritt_zuruecksetzten" />
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
