--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-
     <ImageView
         android:id="@+id/iv_MainBackground"
         android:layout_width="match_parent"
@@ -20,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/karte_startbildschirm2" />
+        app:srcCompat="@drawable/logokarte" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottieanimation"
