--- a/app/src/main/res/layout/activity_loesung.xml
+++ b/app/src/main/res/layout/activity_loesung.xml
@@ -12,8 +12,8 @@
         android:id="@+id/ib_backloesung"
         android:layout_width="59dp"
         android:layout_height="58dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="0dp"
         android:layout_marginEnd="43dp"
         android:layout_marginRight="43dp"
         android:layout_marginBottom="103dp"
@@ -34,8 +34,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="45dp"
         android:gravity="center_horizontal"
-        android:text="Lösung"
+        android:text="@string/bt_loesung"
         android:textColor="@android:color/background_dark"
         android:textSize="35sp"
         android:textStyle="bold" />
@@ -46,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="65dp"
         android:text="Kapietelüberschrift"
         android:textColor="@android:color/background_dark"
         android:textSize="25sp"
@@ -56,22 +57,16 @@
     <ScrollView
         android:id="@+id/sv_loesung"
         android:layout_width="match_parent"
-        android:layout_height="608dp"
+        android:layout_height="600dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="123dp">
+        android:layout_marginTop="132dp">
 
-        <RelativeLayout
+        <WebView
+            android:id="@+id/wv_Aufgabenloesung"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <WebView
-                android:id="@+id/wv_Aufgabenloesung"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp" />
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
     </ScrollView>
 
 </RelativeLayout>
