--- a/app/src/main/res/layout/activity_bordbuch.xml
+++ b/app/src/main/res/layout/activity_bordbuch.xml
@@ -13,10 +13,11 @@
         android:layout_width="59dp"
         android:layout_height="58dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="-1dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
-        android:layout_marginBottom="103dp"
+        android:layout_marginBottom="43dp"
         android:background="@null"
         android:contentDescription="@string/desc"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +36,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="36dp"
         android:gravity="center_horizontal"
         android:text="@string/headline_bordbuch"
         android:textColor="@android:color/background_dark"
@@ -48,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="64dp"
         android:text="@string/tv_kapitelüberschrift"
         android:textColor="@android:color/background_dark"
         android:textSize="25sp"
