--- a/app/src/main/res/layout/activity_crew.xml
+++ b/app/src/main/res/layout/activity_crew.xml
@@ -16,10 +16,8 @@
         android:background="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/ib_backCrew"
@@ -39,11 +37,11 @@
 
     <TextView
         android:id="@+id/tv_crew"
-        android:layout_width="156dp"
-        android:layout_height="57dp"
+        android:layout_width="175dp"
+        android:layout_height="65dp"
         android:text="@string/headline_Crew"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="45sp"
+        android:textColor="@color/colorButton"
+        android:textSize="50sp"
         app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,20 +57,21 @@
         android:layout_marginTop="60dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pirat3" />
 
     <ImageView
         android:id="@+id/iv_bild2"
-        android:layout_width="84dp"
-        android:layout_height="126dp"
+        android:layout_width="83dp"
+        android:layout_height="128dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="200dp"
         android:layout_marginBottom="84dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/piratin1" />
@@ -83,7 +82,7 @@
         android:layout_height="128dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild1"
         app:srcCompat="@drawable/pirat1" />
@@ -93,13 +92,13 @@
         android:layout_width="83dp"
         android:layout_height="128dp"
         android:layout_marginStart="5dp"
-        android:layout_marginBottom="233dp"
+        android:layout_marginBottom="243dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild2"
-        app:srcCompat="@drawable/sparrow" />
+        app:srcCompat="@drawable/piratenbraut" />
 
     <ImageView
         android:id="@+id/iv_bild5"
@@ -108,10 +107,10 @@
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild3"
-        app:srcCompat="@drawable/piratenbraut" />
+        app:srcCompat="@drawable/sparrow" />
 
     <TextView
         android:id="@+id/tv_name1"
@@ -128,14 +127,15 @@
         app:layout_constraintEnd_toStartOf="@+id/iv_bild2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_bild1"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51" />
 
     <TextView
         android:id="@+id/tv_name2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="170dp"
         android:gravity="end"
         android:text="@string/txt_name2"
         android:textColor="@color/color_start_schwarz"
@@ -143,7 +143,7 @@
         app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toTopOf="@+id/tv_name4"
         app:layout_constraintEnd_toStartOf="@+id/iv_bild2"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_crew" />
 
@@ -152,7 +152,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="200dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="90dp"
         android:text="@string/txt_name3"
         android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
@@ -169,14 +169,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="220dp"
         android:layout_marginTop="170dp"
-        android:layout_marginBottom="270dp"
+        android:layout_marginBottom="280dp"
         android:gravity="end"
-        android:text="@string/txt_name4"
+        android:text="@string/txt_name5"
         android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
         app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iv_bild4"
+        app:layout_constraintHorizontal_bias="0.822"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_name2" />
 
@@ -184,26 +185,24 @@
         android:id="@+id/tv_name5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="150dp"
-        android:text="@string/txt_name5"
+        android:layout_marginBottom="170dp"
+        android:text="@string/txt_name4"
         android:textColor="@color/color_start_schwarz"
         android:textSize="20sp"
         app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/iv_bild4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_bild5"
         app:layout_constraintTop_toBottomOf="@+id/tv_name3" />
 
     <ImageView
         android:id="@+id/iv_jack6"
-        android:layout_width="173dp"
-        android:layout_height="151dp"
-        android:layout_marginStart="146dp"
-        android:layout_marginEnd="146dp"
+        android:layout_width="186dp"
+        android:layout_height="175dp"
+        android:foregroundGravity="bottom|center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
@@ -222,7 +221,6 @@
         android:textColor="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toEndOf="@+id/iv_jack6"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild4"
         app:layout_constraintVertical_bias="1.0" />
