--- a/app/src/main/res/layout/activity_logbuch.xml
+++ b/app/src/main/res/layout/activity_logbuch.xml
@@ -13,7 +13,6 @@
         android:layout_width="59dp"
         android:layout_height="58dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginEnd="43dp"
         android:layout_marginBottom="103dp"
         android:background="@null"
@@ -28,11 +27,10 @@
 
     <TextView
         android:id="@+id/tv_Logbucheintrag"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="20dp"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:text="@string/headline_logbuch"
         android:textColor="@android:color/background_dark"
         android:textSize="35sp"
@@ -48,18 +46,15 @@
         android:id="@+id/tv_Kapitel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="74dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="64dp"
         android:text="@string/tv_kapitelüberschrift"
         android:textColor="@android:color/background_dark"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ib_backLogbuch"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_piratenboot"
@@ -72,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_Kapitel"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Kapitel"
         app:srcCompat="@drawable/piratenschiff" />
 
     <Button
@@ -98,7 +93,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="150dp"
         android:background="@drawable/roundbutton"
-        android:text="Programmieren"
+        android:text="@string/bt_programmieren"
         android:textColor="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
