--- a/app/src/main/res/layout/activity_programmieren.xml
+++ b/app/src/main/res/layout/activity_programmieren.xml
@@ -13,9 +13,7 @@
         android:layout_width="59dp"
         android:layout_height="58dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
         android:layout_marginBottom="103dp"
         android:background="@null"
         android:contentDescription="@string/desc"
@@ -31,10 +29,11 @@
         android:id="@+id/tv_programmieren"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tv_ProgrammierenKapitel"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="36dp"
         android:gravity="center_horizontal"
         android:text="@string/headline_Programmieren"
         android:textColor="@android:color/background_dark"
