--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -76,14 +76,14 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/iv_schatztruhe"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/iv_muenzeEinstellungen"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.00999999" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/iv_muenzeEinstellungen"
         android:layout_width="38dp"
         android:layout_height="32dp"
         android:layout_marginEnd="24dp"
