--- a/app/src/main/res/layout/activity_team_kontaktieren.xml
+++ b/app/src/main/res/layout/activity_team_kontaktieren.xml
@@ -31,26 +31,26 @@
         android:id="@+id/tv_ahoi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
-        app:fontFamily="@font/geschwungen"
+        android:layout_marginTop="70dp"
+        android:gravity="center"
         android:text="@string/tv_ahoi_piraten"
         android:textColor="@android:color/background_dark"
         android:textSize="28sp"
-        android:gravity="center"
+        app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toTopOf="@+id/et_name_aendern"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="ContentDescription"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <EditText
         android:id="@+id/et_name_aendern"
         android:layout_width="240dp"
         android:layout_height="41dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         android:ems="10"
         android:hint="@string/name"
         android:importantForAutofill="no"
@@ -66,13 +66,11 @@
         android:layout_width="240dp"
         android:layout_height="41dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="5dp"
         android:ems="10"
         android:hint="@string/semester"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.024"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,47 +81,42 @@
         android:layout_width="240dp"
         android:layout_height="41dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:ems="10"
         android:hint="@string/thema"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/et_Semester"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.024"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name_aendern"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@+id/et_name_aendern" />
 
     <TextView
         android:id="@+id/tv_Flaschenpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="@string/tv_flaschenpostnachricht"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.064"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_Semester"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/et_Semester" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="347dp"
         android:layout_height="142dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@color/design_default_color_background"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bt_absenden"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Flaschenpost">
 
@@ -137,19 +130,20 @@
 
     <ImageView
         android:id="@+id/iv_karte"
-        android:layout_width="156dp"
-        android:layout_height="92dp"
+        android:layout_width="141dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_ahoi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/schatzkarte" />
 
     <ImageView
         android:id="@+id/iv_flasche"
-        android:layout_width="113dp"
-        android:layout_height="106dp"
+        android:layout_width="83dp"
+        android:layout_height="86dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="115dp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
@@ -164,7 +158,8 @@
         android:id="@+id/bt_absenden"
         android:layout_width="129dp"
         android:layout_height="42dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/roundbutton"
         android:text="@string/bt_absenden"
         android:textColor="@color/colorBackground"
