--- a/app/src/main/res/layout/activity_logbuch.xml
+++ b/app/src/main/res/layout/activity_logbuch.xml
@@ -58,62 +58,62 @@
 
     <ImageView
         android:id="@+id/iv_piratenboot"
-        android:layout_width="181dp"
-        android:layout_height="139dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="100dp"
+        android:layout_width="244dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="30dp"
         android:contentDescription="@string/desc"
-        app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_Kapitel"
         app:srcCompat="@drawable/piratenschiff" />
 
-    <Button
-        android:id="@+id/bt_Abfrage"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/roundbutton"
-        android:text="@string/bt_abfrage"
-        android:textColor="@color/colorBackground"
-        app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_Programmieren"
-        app:layout_constraintVertical_bias="0.51" />
-
-    <Button
-        android:id="@+id/bt_Programmieren"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="150dp"
-        android:background="@drawable/roundbutton"
-        android:text="@string/bt_programmieren"
-        android:textColor="@color/colorBackground"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_Bordbuch"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_piratenboot"
+        app:layout_constraintVertical_bias="1.0">
 
-    <Button
-        android:id="@+id/bt_Bordbuch"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/roundbutton"
-        android:text="@string/bt_bordbuch"
-        android:textColor="@color/colorBackground"
-        app:layout_constraintBottom_toTopOf="@+id/bt_Abfrage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_piratenboot" />
+        <Button
+            android:id="@+id/bt_Bordbuch"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/roundbutton"
+            android:text="@string/bt_bordbuch"
+            android:textColor="@color/colorBackground" />
+
+        <Button
+            android:id="@+id/bt_Abfrage"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/roundbutton"
+            android:text="@string/bt_abfrage"
+            android:textColor="@color/colorBackground" />
+
+        <Button
+            android:id="@+id/bt_Programmieren"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/roundbutton"
+            android:text="@string/bt_programmieren"
+            android:textColor="@color/colorBackground" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
